Ports code from Java 20-ea to Java 19 without experimental options.