@@ -39,11 +39,10 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
           <configuration>
-            <source>20</source>
-            <target>20</target>
+            <source>19</source>
+            <target>19</target>
             <compilerArgs>
               <arg>-Xlint:all</arg>
-              <arg>--enable-preview</arg>
             </compilerArgs>
           </configuration>
         </plugin>
